--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropzone": "^14.2.3",
+    "react-medium-image-zoom": "^5.1.2",
     "react-responsive-masonry": "^2.1.7",
     "react-router-dom": "^6.6.2",
     "react-scripts": "^5.0.1",
